ADDED menu ADDED countries frontend

--- a/src/main/frontend/src/app/app.component.html
+++ b/src/main/frontend/src/app/app.component.html
@@ -1,13 +1,17 @@
-<h1>{{title}}</h1>
-<p>app.component.html</p>
-<!--<router-outlet></router-outlet>-->
-<h1>Angular Router App</h1>
-<!-- This nav gives you links to click, which tells the router which route to use (defined in the routes constant in  AppRoutingModule) -->
-<nav>
-  <ul>
-    <li><a routerLink="/" routerLinkActive="active">First Component</a></li>
-    <li><a routerLink="/country" routerLinkActive="active">Second Component</a></li>
-  </ul>
-</nav>
-<!-- The routed views render in the <router-outlet>-->
+<button [matMenuTriggerFor]="menu" mat-button>
+  <mat-icon>menu</mat-icon>
+  Menu
+</button>
+<mat-menu #menu="matMenu" class="mat-menu-content">
+  <button mat-menu-item>
+    <a routerLink="/" routerLinkActive="active">
+      <mat-icon>home</mat-icon>
+      Home</a>
+  </button>
+  <button mat-menu-item>
+    <a routerLink="/country" routerLinkActive="active">
+      <mat-icon>travel_explore</mat-icon>
+      Countries</a>
+  </button>
+</mat-menu>
 <router-outlet></router-outlet>
