--- a/src/main/frontend/src/app/app.component.html
+++ b/src/main/frontend/src/app/app.component.html
@@ -13,5 +13,10 @@
       <mat-icon>travel_explore</mat-icon>
       Countries</a>
   </button>
+  <button mat-menu-item>
+    <a routerLink="/tables" routerLinkActive="active">
+      <mat-icon>toc</mat-icon>
+      Tables</a>
+  </button>
 </mat-menu>
 <router-outlet></router-outlet>
