CHANGED expansion panel to button in competition-table

--- a/src/main/frontend/src/app/competition-table/competition-table.component.html
+++ b/src/main/frontend/src/app/competition-table/competition-table.component.html
@@ -1,12 +1,24 @@
 <h2>Leagues</h2>
-<mat-accordion *ngFor="let league of leagues">
-  <mat-expansion-panel (opened)="getCompetitionTable(league.strLeague)">
-    <mat-expansion-panel-header>
-      <mat-panel-title>
-        {{league.strLeague}}
-      </mat-panel-title>
-    </mat-expansion-panel-header>
-    <p *ngFor="let teamResults of competitionTable" class="teamResult">
-      {{formatLine(teamResults)}}</p>
-  </mat-expansion-panel>
-</mat-accordion>
+<!--<mat-accordion *ngFor="let league of leagues">-->
+<!--  <mat-expansion-panel (opened)="getCompetitionTable(league.strLeague)">-->
+<!--    <mat-expansion-panel-header>-->
+<!--      <mat-panel-title>-->
+<!--        {{league.strLeague}}-->
+<!--      </mat-panel-title>-->
+<!--    </mat-expansion-panel-header>-->
+<!--    <p *ngFor="let teamResults of competitionTable" class="teamResult">-->
+<!--      {{formatLine(teamResults)}}</p>-->
+<!--  </mat-expansion-panel>-->
+<!--</mat-accordion>-->
+
+<div class="container">
+  <div class="leagues-list">
+    <div *ngFor="let league of leagues">
+      <button color="primary" mat-flat-button>{{league.strLeague}}
+        <mat-icon>chevron_right</mat-icon>
+      </button>
+    </div>
+  </div>
+
+  <div class="league-table">Test column 2</div>
+</div>
