--- a/src/main/frontend/src/app/competition-table/competition-table.component.css
+++ b/src/main/frontend/src/app/competition-table/competition-table.component.css
@@ -1,19 +1,25 @@
-.mat-expansion-panel-header-title {
+.mat-flat-button {
   color: #ffffff;
-  background-color: #3f50b4;
-  border-radius: 10px;
-  padding: 8px;
+  width: 80%;
+  margin: 5px;
 }
 
-.mat-expansion-panel {
-  width: 25%;
+.mat-icon {
+  height: 30px;
+  margin: 5px;
+  float: right;
+  color: rgba(0, 0, 0, 0.5);
 }
 
+.container {
+  display: flex;
+  min-width: 100vh;
+}
 
-.teamResult {
-  width: 75%;
-  color: #ffffff;
-  background-image: linear-gradient(to right, darkblue, rgba(0, 31, 255, 0.26));
-  border-radius: 5px;
-  padding: 5px;
+.leagues-list {
+  flex: 1;
+}
+
+.league-table {
+  flex: 4;
 }
