WIP Trying list competition table using async

--- a/src/main/frontend/src/app/competition-table/competition-table.component.html
+++ b/src/main/frontend/src/app/competition-table/competition-table.component.html
@@ -14,7 +14,7 @@
 <div class="container">
   <div class="leagues-list">
     <div *ngFor="let league of leagues">
-      <button color="primary" mat-flat-button>{{league.strLeague}}
+      <button (click)="printCompetitionTable(league)" color="primary" mat-flat-button>{{league.strLeague}}
         <mat-icon>chevron_right</mat-icon>
       </button>
     </div>
