ADDED Team Info page WIP team info page

--- a/src/main/frontend/src/app/app.component.html
+++ b/src/main/frontend/src/app/app.component.html
@@ -36,5 +36,10 @@
       <mat-icon>toc</mat-icon>
       Tables</a>
   </button>
+  <button mat-menu-item>
+    <a (click)="setTitle('Team info')" routerLink="/team-info" routerLinkActive="active">
+      <mat-icon>info</mat-icon>
+      Team info</a>
+  </button>
 </mat-menu>
 <router-outlet></router-outlet>
