--- a/src/main/frontend/src/app/team-info/team-info.component.css
+++ b/src/main/frontend/src/app/team-info/team-info.component.css
@@ -31,7 +31,7 @@
 }
 
 .badge {
-  width: 5%;
+  width: 4%;
 }
 
 .rank-column {
@@ -40,4 +40,21 @@
 
 .rank {
   /*align-content: center;*/
+}
+
+
+.mat-card {
+  margin: 10px;
+  align-items: center;
+  justify-content: center;
+  /*padding: 20px;*/
+
+  border-style: solid;
+  border-width: 1px;
+  border-color: #3f50b4;
+}
+
+
+.mat-panel-description {
+  width: 150%;
 }
