--- a/src/main/frontend/src/app/team-info/team-info.component.html
+++ b/src/main/frontend/src/app/team-info/team-info.component.html
@@ -7,55 +7,58 @@
       </button>
     </div>
   </div>
-
+  <mat-divider [vertical]="true"></mat-divider>
   <div class="league-table">
     <mat-accordion>
       <mat-expansion-panel *ngFor="let teamDetails of teamsDetailsByLeague | async">
         <mat-expansion-panel-header>
           <mat-panel-title>
-            {{teamDetails.strTeam}}
+            <img alt="str_team_badge" class="badge" src="{{teamDetails.strTeamBadge}}">
           </mat-panel-title>
           <mat-panel-description>
-            <img alt="str_team_badge" class="badge" src="{{teamDetails.strTeamBadge}}">
+            {{teamDetails.strTeam}}
           </mat-panel-description>
         </mat-expansion-panel-header>
 
-        <mat-card *ngIf="teamDetails.strTeamShort!=='null'">{{teamDetails.strTeamShort}}</mat-card>
-        <mat-card *ngIf="teamDetails.strCountry!=='null'"><b>Country: </b>  {{teamDetails.strCountry}}</mat-card>
-        <mat-card *ngIf="teamDetails.intFormedYear!==0"><b>Formed Year: </b> {{teamDetails.intFormedYear}}
+        <mat-card *ngIf="teamDetails.strTeamShort!=='null'"><b>Short: </b> &nbsp;{{teamDetails.strTeamShort}}</mat-card>
+        <mat-card *ngIf="teamDetails.strCountry!=='null'"><b>Country: </b> &nbsp;{{teamDetails.strCountry}}</mat-card>
+        <mat-card *ngIf="teamDetails.intFormedYear!==0"><b>Formed Year: </b> &nbsp;{{teamDetails.intFormedYear}}
         </mat-card>
-        <mat-card *ngIf="teamDetails.strFacebook!=='null'"><b>Facebook: </b> <a
-          href="//{{teamDetails.strFacebook}}" target="_blank">{{teamDetails.strFacebook}}</a></mat-card>
-        <mat-card *ngIf="teamDetails.strTwitter!=='null'"><b>Twitter: </b> <a
-          href="//{{teamDetails.strTwitter}}" target="_blank">{{teamDetails.strTwitter}}</a></mat-card>
-        <mat-card *ngIf="teamDetails.strInstagram!=='null'"><b>Instagram: </b><a
-          href="//{{teamDetails.strInstagram}}" target="_blank">{{teamDetails.strInstagram}}</a></mat-card>
-        <mat-card *ngIf="teamDetails.strWebsite!=='null'"><b>Website: </b><a
-          href="//{{teamDetails.strWebsite}}" target="_blank">{{teamDetails.strWebsite}}</a></mat-card>
-        <mat-card *ngIf="teamDetails.strRss!=='null'"><b>RSS: </b><a
-          href="//{{teamDetails.strRss}}" target="_blank">{{teamDetails.strRss}}</a></mat-card>
-        <mat-card *ngIf="teamDetails.strTeamJersey!=='null'"><b>Team Jersey: </b> <img alt="str_team_jersey"
-                                                                                       class="badge"
-                                                                                       src="{{teamDetails.strTeamJersey}}">
+        <mat-card *ngIf="teamDetails.strFacebook"><b>Facebook: </b> <a
+          href="//{{teamDetails.strFacebook}}" target="_blank">&nbsp;{{teamDetails.strFacebook}}</a></mat-card>
+        <mat-card *ngIf="teamDetails.strTwitter"><b>Twitter: </b> <a
+          href="//{{teamDetails.strTwitter}}" target="_blank">&nbsp;{{teamDetails.strTwitter}}</a></mat-card>
+        <mat-card *ngIf="teamDetails.strInstagram"><b>Instagram: </b><a
+          href="//{{teamDetails.strInstagram}}" target="_blank">&nbsp;{{teamDetails.strInstagram}}</a></mat-card>
+        <mat-card *ngIf="teamDetails.strWebsite"><b>Website: </b><a
+          href="//{{teamDetails.strWebsite}}" target="_blank">&nbsp;{{teamDetails.strWebsite}}</a></mat-card>
+        <mat-card *ngIf="teamDetails.strRss"><b>RSS: </b><a
+          href="//{{teamDetails.strRss}}" target="_blank">&nbsp;{{teamDetails.strRss}}</a></mat-card>
+        <mat-card *ngIf="teamDetails.strTeamJersey!=='null'"><b>Team Jersey: </b> &nbsp;<img alt="str_team_jersey"
+                                                                                             class="badge"
+                                                                                             src="{{teamDetails.strTeamJersey}}">
         </mat-card>
-        <mat-card *ngIf="teamDetails.strDescriptionEN!=='null'"><b>Description: </b>  {{teamDetails.strDescriptionEN}}
+        <mat-card *ngIf="teamDetails.strDescriptionEN!=='null'"><b>Description: </b>
+          &nbsp;{{teamDetails.strDescriptionEN}}
         </mat-card>
         <mat-card *ngIf="teamDetails.strStadium!=='null'">
           <mat-accordion>
             <mat-expansion-panel>
               <mat-expansion-panel-header>
-                <mat-panel-title>
-                  <b> Stadium: </b>  {{teamDetails.strStadium}}
+                <mat-panel-title class="key">
+                  <b> Stadium: </b> &nbsp;{{teamDetails.strStadium}}
                 </mat-panel-title>
-                <mat-panel-description *ngIf="teamDetails.strStadiumThumb!=='null'">
+                <mat-panel-description *ngIf="teamDetails.strStadiumThumb!=='null'"> &nbsp;
                   <img alt="str_stadium_thumb" class="badge" src="{{teamDetails.strStadiumThumb}}">
                 </mat-panel-description>
               </mat-expansion-panel-header>
 
+              <mat-card><img alt="str_stadium_thumb" class="stadium-img" src="{{teamDetails.strStadiumThumb}}">
+              </mat-card>
               <mat-card *ngIf="teamDetails.strStadiumLocation!=='null'">
-                <b> Location: </b>  {{teamDetails.strStadiumLocation}}</mat-card>
+                <b> Location: </b> &nbsp;{{teamDetails.strStadiumLocation}}</mat-card>
               <mat-card *ngIf="teamDetails.strStadiumDescription!=='null'">
-                <b> Description: </b>  {{teamDetails.strStadiumDescription}}</mat-card>
+                <b> Description: </b> &nbsp;{{teamDetails.strStadiumDescription}}</mat-card>
 
             </mat-expansion-panel>
           </mat-accordion>
