CHANGED menu order small improvements

--- a/src/main/frontend/src/app/competition-table/competition-table.component.html
+++ b/src/main/frontend/src/app/competition-table/competition-table.component.html
@@ -6,7 +6,7 @@
       </button>
     </div>
   </div>
-
+  <mat-divider [vertical]="true"></mat-divider>
   <div class="league-table">
     <table [dataSource]="competitionTable" class="mat-elevation-z10" mat-table>
       <ng-container class="rank-column" matColumnDef="Rank">
