ADDED player-info component UPDATED nav bar

--- a/src/main/frontend/src/app/app.component.html
+++ b/src/main/frontend/src/app/app.component.html
@@ -24,7 +24,7 @@
       Team info</a>
   </button>
   <button mat-menu-item>
-    <a (click)="setTitle('Players info')" routerLink="/players-info" routerLinkActive="active">
+    <a (click)="setTitle('Players info')" routerLink="/player-info" routerLinkActive="active">
       <mat-icon>contact_page</mat-icon>
       Players info</a>
   </button>
