--- a/src/main/frontend/src/app/player-info/player-info.component.css
+++ b/src/main/frontend/src/app/player-info/player-info.component.css
@@ -1,34 +1,49 @@
-.leagues-container{
-  width: 300px;
-  height: 1050px;
-  border: 1px solid rgba(0, 0, 0, 0.5);
-}
-
-.toggle {
+.toggle-closed {
   display: flex;
-  height: auto;
-  align-items: center;
-  justify-content: center;
+  flex-grow: 1;
+  width: 100px;
+  height: 900px;
+  background-color: #3f50b4;
+  border-width: 10px;
+  border-style: solid;
+  border-image: linear-gradient(90deg, rgb(63, 80, 180) 0%, rgb(44, 60, 150) 50%, rgba(255, 255, 255, 0.78) 100%);
+  border-image-slice: 1;
 }
 
+.leagues-list {
+  background-color: rgba(63, 80, 180, 0.85);
+  padding: 10px;
+}
 
 .toggle-button {
-  margin: 15px;
-  display: flex;
-  height: 1000px;
-  width: 100px;
-  align-items: center;
-  justify-content: center;
+  display: inline;
+}
+
+.toggle-button-text {
+  display: inline;
+  writing-mode: vertical-rl;
+  transform: rotate(180deg);
+  font-size: 20px;
+  color: white;
 }
 
 .toogle-icon {
+  color: rgba(255, 255, 255, 0.75);
+  padding: 10px;
   transform: scale(3);
+}
+
+.toogle-icon-reversed {
+  color: rgba(255, 255, 255, 0.75);
+  padding: 10px;
+  transform: scale(3) rotate(180deg);
 }
 
 .example-sidenav {
   padding: 20px;
 }
 
-* {
-  border: 2px solid red;
+.league-button {
+  margin: 2px;
+  width: 250px;
 }
