--- a/src/main/frontend/src/app/player-info/player-info.component.html
+++ b/src/main/frontend/src/app/player-info/player-info.component.html
@@ -1,3 +1,4 @@
+<div class="page-content">
 <mat-drawer-container class="leagues-container">
   <mat-drawer #drawer mode="side">
     <div class="leagues-list">
@@ -18,3 +19,21 @@
     </button>
   </div>
 </mat-drawer-container>
+
+
+<mat-accordion class="teams">
+  <mat-expansion-panel *ngFor="let teamDetails of teamsDetailsByLeague | async">
+    <mat-expansion-panel-header>
+      <mat-panel-title>
+        <img alt="str_team_badge" class="badge" src="{{teamDetails.strTeamBadge}}">
+      </mat-panel-title>
+      <mat-panel-description>
+        {{teamDetails.strTeam}}
+      </mat-panel-description>
+    </mat-expansion-panel-header>
+
+    <mat-card *ngIf="teamDetails.strTeamShort!=='null'"><b>Short: </b> &nbsp;{{teamDetails.strTeamShort}}</mat-card>
+    <mat-card *ngIf="teamDetails.strCountry!=='null'"><b>Country: </b> &nbsp;{{teamDetails.strCountry}}</mat-card>
+  </mat-expansion-panel>
+</mat-accordion>
+</div>
